--- a/index.html
+++ b/index.html
@@ -123,6 +123,6 @@
         </div>
       </div>
     </div>
-    <script src="scripts.js"></script>
+    <script src="./src/scripts.js"></script>
   </body>
 </html>
